--- a/Dissertation/conclusion.tex
+++ b/Dissertation/conclusion.tex
@@ -5,4 +5,4 @@
 
 \input{common/concl}
 
-После рассмотренной серии публикаций по созданию высокопроизводительных алгоритмов и библиотек CSG-визуализации, начиная с создания открытой библиотеки OpenSG \todo{ours[11]} и закрывая список работой \todo{[7]}, казалось, что вопрос о высокопроизводительной визуализации сложных CSG-сцен удовлетворительно решен. Но, тем не менее, практика современного проектирования вновь ставит этот вопрос на повестку дня. Достигнутый результат существенно продвинул прежнее представление о трассировке сложных CSG-сцен. Планируется продолжить исследование и развитие предложенного алгоритма.
+После рассмотренной серии публикаций по созданию высокопроизводительных алгоритмов и библиотек CSG-визуализации, начиная с создания открытой библиотеки OpenCSG \cite{kirsch2005opencsg} и закрывая список работой \cite{lefebvre2013icesl}, казалось, что вопрос о высокопроизводительной визуализации сложных CSG-сцен удовлетворительно решен. Но, тем не менее, практика современного проектирования вновь ставит этот вопрос на повестку дня. Достигнутый результат существенно продвинул прежнее представление о трассировке сложных CSG-сцен. Планируется продолжить исследование и развитие предложенного метода.
