--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -4,9 +4,7 @@
 
 Настоящая глава определяет модели конструктивной геометрии в терминах \textit{примитивов}, \textit{операций} и \textit{деревьев}. Описаны обход и обработка CSG деревьев. В контексте CSG визуализации, трансформация и симплификация дерева производятся как предварительные шаги, необходимые для последующей эффективной визуализации.
 
-Настоящая глава приводит основные модели и алгоритмы используемые для CSG визуализации, а также описан метод интерактивной фотореалистичной визуализации моделей конструктивно-блочной геометрии предложенный в настоящей работе.
-
-\todo{дописать}
+Настоящая глава приводит основные модели и алгоритмы используемые для CSG визуализации, также описан метод интерактивной фотореалистичной визуализации моделей конструктивно-блочной геометрии предложенный в настоящей работе.
 
 \section{Примитивы} \label{sect_primitives}
 
@@ -102,11 +100,11 @@ CSG модель также может быть представлена в во
 
 \subsection{Нормальная форма} \label{sect_csg_normalization}
 
-Под нормализацией CSG дерева понимают приведение соответствующего CSG выражения к дизъюнктивной нормальной форме (дизъюнкция с минимальным числом элементарных конъюнкций). Эта процедура была предложена в работах \todo{Goldfeather et al. Stewart[36, 37]}. Переход к дизъюнктивной нормальной форме позволяет представить дерево в виде списка и обходить его без рекурсии (или стека). Такой подход позволяет использовать более простые алгоритмы визуализации, однако может приводить к экспоненциальному росту CSG дерева, значительно ограничивая  масштабируемость алгоритмов. Переход к CSG дереву в нормальной форме используется в таких алгоритмах визуализации CSG моделей как Trickle, Goldfeather и Sequenced Convex Subtraction.
+Под нормализацией CSG дерева понимают приведение соответствующего CSG выражения к дизъюнктивной нормальной форме (дизъюнкция с минимальным числом элементарных конъюнкций). Эта процедура была предложена в работе \cite{goldfeather1989near}. Переход к дизъюнктивной нормальной форме позволяет представить дерево в виде списка и обходить его без рекурсии (или стека). Такой подход позволяет использовать более простые алгоритмы визуализации, однако может приводить к экспоненциальному росту CSG дерева, значительно ограничивая  масштабируемость алгоритмов. Переход к CSG дереву в нормальной форме используется в таких алгоритмах визуализации CSG моделей как Trickle, Goldfeather и Sequenced Convex Subtraction.
 
 \subsection{Позитивная форма} \label{sect_csg_positive_form}
 
-Булево выражение представлено в \textit{позитивной форме}, если оно состоит только из операций дизъюнкции, конъюнкции и отрицания \todo{ours[9]}. Преобразование CSG дерева, соответствующего булеву выражению в позитивную форму может быть проведено с помощью законов де Моргана, которые в нотации теории множеств выглядят как:
+Булево выражение представлено в \textit{позитивной форме}, если оно состоит только из операций дизъюнкции, конъюнкции и отрицания \cite{rossignac1988active}. Преобразование CSG дерева, соответствующего булеву выражению в позитивную форму может быть проведено с помощью законов де Моргана, которые в нотации теории множеств выглядят как:
 
 \begin{align}
   \overline{x \cup y} & = \overline{x} \cap \overline{y}, \nonumber \\
@@ -129,7 +127,7 @@ CSG модель также может быть представлена в во
 
 В позитивной форме узлы CSG дерева могут быть перемещены на каждой операции объединения либо пересечения, благодаря коммутативности этих операций: $(a \cup b) = (b \cup a)$ и $(a \cap b) = (b \cap a)$. В то же время $(a \setminus b) = (b \setminus a)$, так как операция разности не коммутативна.
 
-CSG деревья в позитивной форме используются во множестве CSG алгоритмов \todo{Stew[80, 77, 23, 78, 43, 46, 76]} включая алгоритмы визуализации. Среди преимуществ позитивной формы по сравнению с нормальной формой можно выделить структурную схожесть с исходным CSG деревом (количество узлов и их порядок в дереве не меняется) и отсутствие экспоненциального роста CSG дерева. Переход к позитивной формой необходим как предварительный шаг для таких методов визуализации CSG деревьев как BList \todo{Stew[78]} и CST \todo{Stew[46]}, а так же для метода описанного в настоящей работе.
+CSG деревья в позитивной форме используются во множестве CSG алгоритмов \cite{rossignac1988active}, \cite{rossignac1994processing}, \cite{rossignac1999blist}, \cite{cameron1989relationship}, \cite{hable2005blister}, \cite{hable2007cst}, \cite{rossignac2007optimized} включая алгоритмы визуализации. Среди преимуществ позитивной формы по сравнению с нормальной формой можно выделить структурную схожесть с исходным CSG деревом (количество узлов и их порядок в дереве не меняется) и отсутствие экспоненциального роста CSG дерева. Переход к позитивной формой необходим как предварительный шаг для таких методов визуализации CSG деревьев как BList \cite{rossignac1999blist} и CST \cite{hable2007cst}, а так же для метода описанного в настоящей работе.
 
 \section{Алгебраическое упрощение CSG дерева} \label{sect_csg_tree_pruning}
 
@@ -153,9 +151,9 @@ CSG деревья часто могут быть упрощены путем о
 
 \section{Геометрическое упрощение CSG дерева} \label{sect_csg_bound_pruning}
 
-\textit{Ограничивающие объемы} (англ. bounding volumes) и \textit{иерархии ограничивающих объемов} (англ. bounding volume hierarchies) являются важными инструментами для таких задач как визуализация \todo{Stew[24, 81, 96]} и обнаружение столкновений. Ограничивающие объемы также могут быть применены к задаче упрощения CSG дерева.
+\textit{Ограничивающие объемы} (англ. bounding volumes) и \textit{иерархии ограничивающих объемов} (англ. bounding volume hierarchies) являются важными инструментами для таких задач как визуализация\cite{clark1976hierarchical}, \cite{rubin19803}, \cite{weghorst1984improved} и обнаружение столкновений. Ограничивающие объемы также могут быть применены к задаче упрощения CSG дерева.
 
-Ограничивающий объем полностью перекрывает геометрический объект вместе с дополнительным пространством. Такие задачи как классификация точки или бросание луча могут быть реализованы более эффективно для геометрически простых ограничивающих объемов, чем для более сложной геометрии, которую они содержат. Среди распространенных типов ограничивающих объемов можно выделить AABB (англ. Axis Aligned Bounding Box, ограничивающий параллелепипед параллельный осям), OBB (англ. Oriented Bounding Boxes, ориентированный ограничивающий параллелепипед), сферы и выпуклые оболочки. На практике, точность представления геометрии, производительность операций и сложность реализации различается для разных подходов к построению ограничивающих объемов. В то время как операции классификации точки и бросания луча могут быть выполнены очень быстро для AABB, они могут охватывать много лишнего пространства для геометрии ориентированной не параллельно координатным осям. Выпуклые оболочки, в свою очередь, гораздо лучше охватывают исходную геометрию, но их построение и алгоритмы классификации являются более вычислительно сложными. На практике, для задачи упрощения CSG дерева обычно используют AABB \todo{Stew[20, 37, 97]}, однако рассмотренные далее принципы применимы к любым видам ограничивающих объемов.
+Ограничивающий объем полностью перекрывает геометрический объект вместе с дополнительным пространством. Такие задачи как классификация точки или бросание луча могут быть реализованы более эффективно для геометрически простых ограничивающих объемов, чем для более сложной геометрии, которую они содержат. Среди распространенных типов ограничивающих объемов можно выделить AABB (англ. Axis Aligned Bounding Box, ограничивающий параллелепипед параллельный осям), OBB (англ. Oriented Bounding Boxes, ориентированный ограничивающий параллелепипед), сферы и выпуклые оболочки. На практике, точность представления геометрии, производительность операций и сложность реализации различается для разных подходов к построению ограничивающих объемов. В то время как операции классификации точки и бросания луча могут быть выполнены очень быстро для AABB, они могут охватывать много лишнего пространства для геометрии ориентированной не параллельно координатным осям. Выпуклые оболочки, в свою очередь, гораздо лучше охватывают исходную геометрию, но их построение и алгоритмы классификации являются более вычислительно сложными. На практике, для задачи упрощения CSG дерева обычно используют AABB \cite{bouatouch1987new}, \cite{goldfeather1989near}, \cite{wiegand1996interactive}, однако рассмотренные далее принципы применимы к любым видам ограничивающих объемов.
 
 Для упрощения CSG дерева ограничивающие объемы определяются для каждого листового и внутреннего узла в обратном порядке обхода. Ограничивающие объемы листовых узлов вычисляются непосредственно по геометрии примитивов. Ограничивающие объемы внутренних узлов вычисляются по правилам \ref{eq:bounds}. Геометрическое упрощение дерева с использованием ограничивающих объемов следует проводить в общей форме CSG дерева, а не в позитивной, так как примитивы с отрицаниями не могут быть ограничены ограничивающим объемом конечного размера. 
 
@@ -170,19 +168,19 @@ CSG деревья часто могут быть упрощены путем о
 
 Сам процесс упрощения CSG дерева также происходит во время обхода в обратном порядке. Узлы с пустыми ограничивающими объемами отбрасываются. Узлы с операциями пересечения и разности отбрасываются если пересечение ограничивающих объемов операндов соответствуют пустому объему.
 
-Процесс вычисления ограничивающих объемов для внутренних узлов (согласно правилам \ref{eq:bounds}) может приводить к захватыванию ограничивающими объемами дополнительного пустого пространства, что нежелательно, так как в таком случае, поддеревья которые могли бы быть отброшены не будут отброшены. Однако, на практике, не смотря на ограничения, упрощение CSG дерева по ограничивающим объемам успешно используется (например, в работах \todo{Stew[20, 37, 97]}, а так же в настоящей работе).
+Процесс вычисления ограничивающих объемов для внутренних узлов (согласно правилам \ref{eq:bounds}) может приводить к захватыванию ограничивающими объемами дополнительного пустого пространства, что нежелательно, так как в таком случае, поддеревья которые могли бы быть отброшены не будут отброшены. Однако, на практике, не смотря на ограничения, упрощение CSG дерева по ограничивающим объемам успешно используется (например, в работах \cite{bouatouch1987new}, \cite{goldfeather1989near}, \cite{wiegand1996interactive}, а так же в настоящей работе).
 
 \section{Определение пустого объекта} \label{sect_csg_null_object}
 
 Задачи \textit{определения пустого объекта} (англ. Null Object Detection, NOD) и определения идентичного объекта (англ. Same Object Detection, SOD) возникают в областях геометрического моделирования, САПР, робототехники, компьютерной графики и компьютерного зрения. В контексте CSG NOD определяет, соответствует ли CSG дерево пустому объему. SOD определяет соответствуют ли два CSG дерева одному и тому же объему. Задачи SOD и NOD считаются эквивалентными, так как SOD может быть решена в терминах NOD: $SOD(a, b) = NOD(a \setminus b) \ \text{and} \ NOD(b \setminus a)$.
 
-Подход к реализации NOD для CSG приведен в работе \todo{Tilove Stew[94]}.
+Подход к реализации NOD для CSG приведен в работе \cite{tilove1984null}.
 
 Упрощение CSG дерева с помощью процедуры NOD вместо использования ограничивающих объемов, потенциально позволяет отсекать больше поддеревьев, так как NOD работает непосредственно с геометрией, а не с аппроксимациями. Следует отметить, что подобный подход требует гораздо больших вычислительных ресурсов, так как требует, в общем случае, перевода отдельных поддеревьев в граничное либо воксельное представление с заданной точностью.
 
 \section{Алгоритм Кенслера} \label{sect2_kensler}
 
-Подход к визуализации CSG моделей на базе трассировки лучей представленный в работе \todo{[8]} основан на поиске ближайших точек соударения лучей с примитивами 3D сцены. Алгоритм использует концепцию конечного автомата для вычисления точки пересечения с границей CSG модели. При этом требуется, чтобы базовые примитивы были замкнутыми (допустимо обобщение для ориентируемых поверхностей), имели согласованное поле нормалей и не содержали самопересечений. Элегантность решения и приемлемые ограничения позволяют довольно просто реализовать поддержку конструктивных моделей в любой программной системе, основанной на трассировке лучей. Хотя указанная работа не содержит упоминаний о практических испытаниях алгоритма, он представляется наилучшей основой для разработки специализированной версии для GPU. Далее кратко рассматриваются основные шаги алгоритма, в котором нами исправлены неточности в таблицах смены состояний.
+Подход к визуализации CSG моделей на базе трассировки лучей представленный в работе \cite{kensler2006ray}основан на поиске ближайших точек соударения лучей с примитивами 3D сцены. Алгоритм использует концепцию конечного автомата для вычисления точки пересечения с границей CSG модели. При этом требуется, чтобы базовые примитивы были замкнутыми (допустимо обобщение для ориентируемых поверхностей), имели согласованное поле нормалей и не содержали самопересечений. Элегантность решения и приемлемые ограничения позволяют довольно просто реализовать поддержку конструктивных моделей в любой программной системе, основанной на трассировке лучей. Хотя указанная работа не содержит упоминаний о практических испытаниях алгоритма, он представляется наилучшей основой для разработки специализированной версии для GPU. Далее кратко рассматриваются основные шаги алгоритма, в котором нами исправлены неточности в таблицах смены состояний.
 
 Обозначим символом $T$ входное CSG дерево, а символами $L(T)$ и $R(T)$ его левое и правое поддерево соответственно. Для поиска ближайшей точки пересечения луча с деревом $T$, луч пересекается сначала с поддеревьями $L(T)$ и $R(T)$. Результатом каждого теста пересечения является одно из трех состояний луча: “вход” (entering), “выход” (exiting), “проходит мимо” (missing). На основе результатов двух  тестов, выполняется одно из трех действий: (1) вернуть точку соударения; (2) вернуть результат, соответствующий отсутствию пересечения; (3) переместить начальную точку луча к поддереву $L(T)$ или $R(T)$ и перейти на следующую итерацию для обработки очередной точки пересечения. В последнем случае, конечный автомат начинает новый цикл работы.
 
@@ -278,7 +276,7 @@ CSG деревья часто могут быть упрощены путем о
 
 Для оптимальной производительности визуализации путём трассировки лучей необходимо использовать ограничивающие объёмы, как можно более плотно прилегающие к узлам CSG дерева. Такой выбор ограничивающих объёмов минимизирует вероятность их пересечения с лучом, не ведущего к последующему пересечению с узлом дерева. Предложена процедура пространственной оптимизации CSG дерева, минимизирующая размер ограничивающих объёмов внутренних узлов дерева. Назовём трилетом выбранный узел дерева вместе с набором его непосредственных узлов-потомков (поддерево ограниченное снизу). Предложенная процедура оптимизации основана на последовательном выборе трилетов, состоящих из узлов с одинаковыми булевыми операциями,  и их последующей реструктуризации (в позитивной форме узлы таких трилетов могут быть произвольно перемещены внутри трилета). Трилеты могут быть построены во время прямого обхода CSG дерева путём рекурсивного объединения узлов с одинаковыми CSG операциями. Полученный трилет необходимо реорганизовать с помощью эвристики площади поверхности (Surface Area Heuristic, SAH), широко используемой для построения ускоряющих структур таких как k-d дерево или иерархия ограничивающих объёмов (BVH). Затем процедура продолжается рекурсивно с листовыми узлами трилета.
 
-Реорганизация трилета происходит с помощью техники корзин схожей с техникой построения BVH \todo{ours[10]}. Структура BVH строится по листовым узлам трилета, ограниченным AABB (ограничивающий параллелепипед параллельный осям) полученным из исходного CSG дерева в общей форме. Для листовых узлов трилета соответствующих примитивам CSG дерева с отрицаниями используются исходные ограничивающие объёмы, а не их дополнения, которые соответствовали бы бесконечному AABB. Такая стратегия позволяет немного улучшить результат, так как бесконечные ограничивающие объёмы не несут никакой информации о позиции примитивов.
+Реорганизация трилета происходит с помощью техники корзин схожей с техникой построения BVH \cite{wald2007fast}. Структура BVH строится по листовым узлам трилета, ограниченным AABB (ограничивающий параллелепипед параллельный осям) полученным из исходного CSG дерева в общей форме. Для листовых узлов трилета соответствующих примитивам CSG дерева с отрицаниями используются исходные ограничивающие объёмы, а не их дополнения, которые соответствовали бы бесконечному AABB. Такая стратегия позволяет немного улучшить результат, так как бесконечные ограничивающие объёмы не несут никакой информации о позиции примитивов.
 
 \subsection{Минимизация высоты CSG дерева} \label{sect2_height_minimization}
 
@@ -318,7 +316,7 @@ CSG деревья часто могут быть упрощены путем о
 
 В стохастической трассировке путей все траектории переноса излучения генерируются «прямым» методом, начиная от диафрагмы виртуальной камеры. Данная стратегия не всегда является наиболее эффективной. Характерными примерами служат сцены с преобладанием вторичного освещения (перекрытые источники света) или резкими колебаниями светового поля (каустики). В подобных случаях крайне сложно построить корректные пути переноса излучения, выполняя трассировку от виртуальной камеры.
 
-Решить данную проблему можно за счет двунаправленной трассировки путей, которая была независимо предложена Э. Вичем \todo{D[129]} и Э. Лафорчуном \todo{D[6]}. Данный метод генерирует пути из источника света («световой» путь) и диафрагмы виртуальной камеры («видовой» путь). Затем все вершины построенных путей соединяются теневыми лучами, за счет чего образуется множество корректных путей переноса излучения.
+Решить данную проблему можно за счет двунаправленной трассировки путей, которая была независимо предложена Э. Вичем \cite{veach1997robust} и Э. Лафорчуном \cite{lafortune1993bi}. Данный метод генерирует пути из источника света («световой» путь) и диафрагмы виртуальной камеры («видовой» путь). Затем все вершины построенных путей соединяются теневыми лучами, за счет чего образуется множество корректных путей переноса излучения.
 
 В двунаправленной трассировке каждый путь длины $k$ можно построить $k + 1$ способом, соединяя «видовой» путь длины $s \ge 0$ со «световым» путем длины $t \ge 0$, где $k = s + t$. При этом любой из двух путей может быть нулевой длины. Если длина «светового» пути равна нулю, то последовательность «видовых» вершин является неявным путем и должна заканчиваться на источнике света. Если «видовой» путь имеет нулевую длину (содержит только одну вершину), то «световой» путь явно соединяется с виртуальной камерой. В настоящей работе не рассматривается ситуация, когда «световой» путь непосредственно пересекает диафрагму виртуальной камеры. Как правило, вклад таких путей в окончательное изображение пренебрежимо мал.
 
@@ -326,7 +324,7 @@ CSG деревья часто могут быть упрощены путем о
 
 \subsection{Алгоритм «усеченной» двунаправленной трассировки путей}
 
-В силу перечисленных обстоятельств в настоящей работе предлагается использовать «усеченный» вариант двунаправленной трассировки путей, который по затратам сопоставим с обычной трассировкой и сохраняет основные преимущества исходного алгоритма. Данный алгоритм формирует изображение за два этапа. На первом этапе выполняется обратная трассировка от объектива виртуальной камеры, в ходе которой генерируются явные и неявные траектории переноса излучения. На втором этапе выполняется прямая трассировка от источника света, в процессе которой все вершины пути явно соединяются с камерой. Вклады различных путей комбинируются в одну несмещенную Монте-Карло оценку с использованием многократной выборки по значимости. Данный метод можно рассматривать как частный случай «полной» двунаправленной трассировки, при котором один из соединяемых путей содержит не более одной вершины ($s \le 1$ или $t \le 1$). Основные преимущества такого подхода определяются следующими особенностями:
+В силу перечисленных обстоятельств в настоящей работе предлагается использовать «усеченный» вариант двунаправленной трассировки путей \cite{bogolepov2013gpu}, который по затратам сопоставим с обычной трассировкой и сохраняет основные преимущества исходного алгоритма. Данный алгоритм формирует изображение за два этапа. На первом этапе выполняется обратная трассировка от объектива виртуальной камеры, в ходе которой генерируются явные и неявные траектории переноса излучения. На втором этапе выполняется прямая трассировка от источника света, в процессе которой все вершины пути явно соединяются с камерой. Вклады различных путей комбинируются в одну несмещенную Монте-Карло оценку с использованием многократной выборки по значимости. Данный метод можно рассматривать как частный случай «полной» двунаправленной трассировки, при котором один из соединяемых путей содержит не более одной вершины ($s \le 1$ или $t \le 1$). Основные преимущества такого подхода определяются следующими особенностями:
 
 \begin{itemize}  
   \item На стадии прямой и обратной трассировки для обработки путей произвольной длины требуется фиксированный объем памяти. Данное обстоятельство позволяет нагрузить графический процессор большим числом «легковесных» путей и снимает ограничения при синтезе несмещенных изображений (когда необходимо большое число отскоков).
