--- a/Dissertation/part3.tex
+++ b/Dissertation/part3.tex
@@ -159,7 +159,7 @@
 
 \begin{table} [htbp]%
     \centering
-	\caption{Сравнение производительности (в FPS на GF GTX 680) с решениями-аналогами OpenSG и IceSL \todo{ours[7]}}%
+	\caption{Сравнение производительности (в FPS на GF GTX 680) с решениями-аналогами OpenSG и IceSL \cite{lefebvre2013icesl}}%
 	\label{tbl:comparison}
     \renewcommand{\arraystretch}{1.5}
     \begin{SingleSpace}
