--- a/biblio/authorpapers.bib
+++ b/biblio/authorpapers.bib
@@ -1,17 +1,70 @@
-@ARTICLE{bib1,
-  author = {Фамилия, И. О.},
-  title = {Название статьи},
-  journal = {Журнал},
-  year = {2012},
-  volume = {1},
-  pages = {100},
-  language = {russian},
+@article{bogolepov2013gpu,
+  title={GPU-optimized bi-directional path tracing},
+  author={Bogolepov, Denis and Ulyanov, Danila and Sopin, Dmitry and Turlapov, Vadim},
+  year={2013},
+  publisher={V{\'a}clav Skala-UNION Agency},
+  language = {english}
 }
 
-@CONFERENCE{bib2,
-  author = {Фамилия, И. О.},
-  title = {название тезисов конференции},
-  booktitle = {Название сборника},
+@ARTICLE{bib2016,
+  author = {Ulyanov, D.Ya. Bogolepov, D.K. Turlapov, V.E.},
+  title = {GPU-optimized Ray-tracing for Constructive Solid Geometry Scenes},
+  journal = {Proc. of the 26th Int. Conf. GraphiCon’2016},
+  year = {2016},
+  pages = {19--23},
+  language = {english}
+}
+
+@ARTICLE{bib2012,
+  author = {Боголепов Д.К., Ульянов Д.Я., Турлапов В.Е.},
+  title = {Об одной реализации трассировки путей для графического процессора},
+  journal = {Высокопроизводительные параллельные вычисления на кластерных системах: Тез.докл. Всеросс. науч.конф.},
   year = {2012},
-  language = {russian},
+  pages = {42--46},
+  language = {russian}
+}
+
+@ARTICLE{bib2012vol,
+  author = {Боголепов Д.К., Бугаев И., Сопин Д.П., Ульянов Д. Я., Турлапов В.Е.},
+  title = {Высококачественная объёмная визуализация в реальном времени},
+  journal = {Труды межд. конф. GraphiCon'2012},
+  year = {2012},
+  pages = {169--173},
+  language = {russian}
+}
+
+@ARTICLE{bib2012sys,
+  author = {Боголепов Д.К., Сопин Д.П., Ульянов Д. Я., Турлапов В.Е.},
+  title = {Система интерактивного расчёта глобального освещения для гибридных сцен},
+  journal = {Труды межд. конф. GraphiCon'2012},
+  year = {2012},
+  pages = {227--232},
+  language = {russian}
+}
+
+@ARTICLE{bib2011,
+  author = {Боголепов Д.К., Сопин Д.П., Ульянов Д. Я., Турлапов В.Е.},
+  title = {Построение SAH BVH деревьев для трассировки лучей на GPU в реальном времени статья},
+  journal = {Материалы XI Всеросс. конф. «Высокопроизводительные параллельные вычисления на кластерных системах»},
+  year = {2011},
+  pages = {298--303},
+  language = {russian}
+}
+
+@ARTICLE{bib2011sah,
+  author = {Bogolepov, D., Sopin, D., Ulyanov, D.},
+  title = {Real-time SAH BVH construction for ray tracing dynamic scenes},
+  journal = {Proc. of the 21th Int. Conf. on Computer Graphics and Vision «GraphiCon’2011»},
+  year = {2011},
+  pages = {298--303},
+  language = {english}
+}
+
+@ARTICLE{bib2010,
+  author = {Ульянов Д.Я.},
+  title = {Об одной реализации метода фотонных карт для визуализации каустик},
+  journal = {Труды XX конф. GraphiCon'2010},
+  year = {2010},
+  pages = {358--359},
+  language = {russian}
 }
