--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -1,186 +1,3 @@
-% ГОСТ Р 7.0.11-2011, Приложение Б, Книги
-@BOOK{Sychev,
-  author = {Сычёв, М. С.},
-  title = {История Астраханвского казачьего войска: учебное пособие},
-  address = {Астрахань},
-  publisher = {Волга},
-  year = {2009},
-  numpages = {231},
-  language = {russian}
-}
-
-@BOOK{Sokolov,
-  author = {Соколов, А. Н. and Сердобинцев, К. С.},
-  editor = {Бочарова, В. М.},
-  address = {Астрахань},
-  publisher = {Калиниградский ЮИ МВД России},
-  title = {Гражданское общество: проблемы формирования и развития (философский и юридический аспекты): монография},
-  year = {2009},
-  numpages = {218},
-  language = {russian}
-}
-
-@BOOK{Gaidaenko,
-  author = {Гайдаенко, Т. А.},
-  title = {Маркетинговое управление: принципы управленческих решений и российская практика},
-  edition = {3-е изд, перераб. и доп.},
-  address = {М.},
-  publisher = {Эксмо: МИРБИС},
-  year = {2008},
-  numpages = {508},
-  language = {russian}
-}
-
-@BOOK{Lermontov,
-  author = {Лермонтов, Михаил Юрьевич},
-  title = {Собрание сочинений: в 4 т.},
-  address = {М.},
-  publisher = {Терра-Кн. клуб},
-  year = {2009},
-  note = {4 т.},
-  language = {russian}
-}
-
-@BOOK{Management,
-  title = {Управление бизнесом: сборник статей},
-  address = {Нижний новгород},
-  publisher = {Изд-во Нижегородского университета},
-  year = {2009},
-  numpages = {243},
-  language = {russian}
-}
-
-@BOOK{Borozda,
-  author = {Борозда, И. В. and Воронин, Н. И. and Бушманов, А. В.},
-  title = {Лечение сочетанных повреждений таза},
-  address = {Владивосток},
-  publisher = {Дальнаука},
-  year = {2009},
-  numpages = {195},
-  language = {russian}
-}
-
-@BOOK{Marketing,
-  author = {Михненков, О. В. and Коготкова, И. З. and Генкин, Е. В. and Сороко, Г. Я.},
-  title = {Маркетинговые исследования в строительстве: учебное пособие для студентов специальности «Менеджемент организаций»},
-  address = {М.},
-  publisher = {Государственный университет управления},
-  year = {2005},
-  numpages = {59},
-  language = {russian}
-}
-
-% ГОСТ Р 7.0.11-2011, Приложение Б, Нормативные правовые акты
-@BOOK{Constitution,
-  title = {Конституция Российской Федерации: офиц. текст.},
-  address = {М.},
-  publisher = {Маркетинг},
-  year = {2001},
-  numpages = {39},
-  language = {russian}
-}
-
-@BOOK{FamilyCode,
-  title = {Семейный кодекс Российской Федерации: [федер. закон: принят Гос. Думой 8 дек. 1995~г.: по состоянию на 3~янв. 2001~г.]},
-  address = {СПб.},
-  publisher = {Стаун-кантри},
-  year = {2001},
-  numpages = {94},
-  language = {russian}
-}
-
-% ГОСТ Р 7.0.11-2011, Приложение Б, Стандарты
-@BOOK{Gost.7.0.53,
-  title = {ГОСТ Р 7.0.53-2007 Система стандартов по информации, библиотечному и издательскому делу. Издания. Международный стандартный книжный номер. Использование и издательское оформление.},
-  address = {М.},
-  publisher = {Стандартинформ},
-  year = {2007},
-  numpages = {5},
-  language = {russian}
-}
-
-% ГОСТ Р 7.0.11-2011, Приложение Б, Депонированные научные работы
-@BOOK{Razumovski,
-  author = {Разумовский, В. А. and Андреев, Д. А.},
-  title = {Управление маркетинговыми исследованиями в регионе},
-  address = {М.},
-  year = {2002},
-  numpages = {210},
-  note = {Деп. в ИНИОН Рос. акад. наук 15.02.02, № 139876},
-  language = {russian}
-}
-
-% ГОСТ Р 7.0.11-2011, Приложение Б, Диссертации
-@BOOK{Lagkueva,
-  author = {Лагкуева, Ирина Владимировна},
-  title = {Особенности регулирования труда творческих работников театров: дис. ... канд. юрид. наук: 12.00.05},
-  address = {М.},
-  year = {2009},
-  numpages = {168},
-  language = {russian}
-}
-
-@BOOK{Pokrovski,
-  author = {Покровский, Андрей Владимирович},
-  title = {Устранимые особенности решений эллиптических уравнений: дис. ... д-ра физ.-мат. наук: 01.01.01},
-  address = {М.},
-  year = {2008},
-  numpages = {178},
-  language = {russian}
-}
-
-% ГОСТ Р 7.0.11-2011, Приложение Б, Авторефераты диссертаций
-@BOOK{Sirotko,
-  author = {Сиротко, Владимир Викторович},
-  title = {Медико-социальные аспекты городского травматизма в современных условиях : автореф. дис. ... канд. мед. наук : 14.00.33},
-  address = {М.},
-  year = {2006},
-  numpages = {26},
-  language = {russian}
-}
-
-@BOOK{Lukina,
-  author = {Лукина, Валентина Александровна},
-  title = {Творческая история «Записок охотника» И. С. Тургенева: автореф. дис. ... канд. филол. наук : 10.01.01},
-  address = {СПб.},
-  year = {2006},
-  numpages = {26},
-  language = {russian}
-}
-
-% ГОСТ Р 7.0.11-2011, Приложение Б, Отчёты о научно-исследовательской работе
-@BOOK{Methodology,
-  author = {Загорюев, А. Л.},
-  title = {Методология и методы изучения военно-профессиональной направленности подростков: отчёт о НИР},
-  address = {Екатеринбург},
-  institution = {Уральский институт практической психологии},
-  year = {2008},
-  numpages = {102},
-  language = {russian}
-}
-
-% ГОСТ Р 7.0.11-2011, Приложение Б, Электронные ресурсы
-@BOOK{Encyclopedia,
-  title = {Художественная энциклопедия зарубежного классического искусства [Электронный ресурс]},
-  address = {М.},
-  publisher = {Большая Рос. энкцикл.},
-  year = {1996},
-  note = {1 электрон. опт. диск (CD-ROM)},
-  language = {russian}
-}
-
-@ARTICLE{Nasirova,
-  author = {Насырова, Г. А.},
-  title = {Модели государственного регулирования страховой деятельности [Электронный ресурс]},
-  journal = {Вестник Финансовой академии},
-  year = {2003},
-  number = {4},
-  note = {Режим доступа: http://vestnik.fa.ru/4(28)2003/4.html},
-  language = {russian}
-}
-
-% ГОСТ Р 7.0.11-2011, Приложение Б, Статьи
-
 @ARTICLE{Requicha80,
   author={Requicha, A. G.},
   title = {Representations for Rigid Solids: Theory, Methods, and Systems },
@@ -191,346 +8,603 @@
   language = {english}
 }
 
-@ARTICLE{Berestova,
-  author = {Берестова, Т. Ф.},
-  title = {Поисковые инструмены библиотеки},
-  journal = {Библиография},
-  year = {2006},
-  number = {4},
-  pages = {19},
-  language = {russian}
-}
-
-@ARTICLE{Kriger,
-  author = {Кригер, И.},
-  title =  {Бумага терпит},
-  journal = {Новая газета},
-  year = {2009},
-  note = {1 июля},
-  language = {russian}
-}
-
-
-% Examples from https://verbosus.com/bibtex-style-examples.html
-@ARTICLE{Article,
-  author   = {Peter Adams},
-  title    = {The title of the work},
-  journal  = {The name of the journal},
-  year     = {1993},
-  number   = {2},
-  pages    = {201-213},
-  month    = {7},
-  note     = {An optional note},
-  volume   = {4},
+@book{Gall73,
+  title={Group technology},
+  author={Gallagher, Colin Crompton and Knight, Winston Anthony},
+  year={1973},
+  publisher={Butterworths},
   language = {english}
 }
 
-@BOOK{Book,
-  author    = {Peter Babington}, 
-  title     = {The title of the work},
-  publisher = {The name of the publisher},
-  year      = {1993},
-  volume    = {4},
-  series    = {10},
-  address   = {The address},
-  edition   = {3},
-  month     = {7},
-  note      = {An optional note},
-  isbn      = {3257227892},
-  language  = {english}
-}
-
-@BOOKLET{Booklet,
-  title        = {The title of the work},
-  author       = {Peter Caxton}, 
-  howpublished = {How it was published},
-  address      = {The address of the publisher},
-  month        = {7},
-  year         = {1993},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@CONFERENCE{Conference,
-  author       = {Peter Draper}, 
-  title        = {The title of the work},
-  booktitle    = {The title of the book},
-  year         = {1993},
-  editor       = {The editor},
-  volume       = {4},
-  series       = {5},
-  pages        = {213},
-  address      = {The address of the publisher},
-  month        = {7},
-  organization = {The organization},
-  publisher    = {The publisher},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@INBOOK{Inbook,
-  author       = {Peter Eston},
-  title        = {The title of the work},
-  booktitle    = {Book title},
-  chapter      = {8},
-  pages        = {201-213},
-  publisher    = {The name of the publisher},
-  year         = {1993},
-  volume       = {4},
-  series       = {5},
-  address      = {The address of the publisher},
-  edition      = {3},
-  month        = {7},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@INCOLLECTION{Incollection,
-  author       = {Peter Farindon},
-  title        = {The title of the work},
-  booktitle    = {The title of the book},
-  publisher    = {The name of the publisher},
-  year         = {1993},
-  editor       = {The editor},
-  volume       = {4},
-  series       = {5},
-  chapter      = {8},
-  pages        = {201-213},
-  address      = {The address of the publisher},
-  edition      = {3},
-  month        = {7},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@MANUAL{Manual,
-  title        = {The title of the work},
-  author       = {Peter Gainsford}, 
-  organization = {The organization},
-  address      = {The address of the publisher},
-  edition      = {3},
-  month        = {7},
-  year         = {1993},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@MASTERSTHESIS{Mastersthesis,
-  author       = {Peter Harwood},
-  title        = {The title of the work},
-  school       = {The school where the thesis was written},
-  year         = {1993},
-  address      = {The address of the publisher},
-  month        = {7},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@MISC{Misc,
-  author       = {Peter Isley},
-  title        = {The title of the work},
-  howpublished = {How it was published},
-  month        = {7},
-  year         = {1993},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@PHDTHESIS{Phdthesis,
-  author       = {Peter Joslin}, 
-  title        = {The title of the work},
-  school       = {The school where the thesis was written},
-  year         = {1993},
-  address      = {The address of the publisher},
-  month        = {7},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@PROCEEDINGS{Proceedings,
-  title        = {The title of the work},
-  year         = {1993},
-  editor       = {Peter Kidwelly},
-  volume       = {4},
-  series       = {5},
-  address      = {The address of the publisher},
-  month        = {7},
-  organization = {The organization},
-  publisher    = {The name of the publisher},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@TECHREPORT{Techreport,
-  author       = {Peter Lambert},
-  title        = {The title of the work},
-  institution  = {The institution that published},
-  year         = {1993},
-  number       = {2},
-  address      = {The address of the publisher},
-  month        = {7},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@UNPUBLISHED{Unpublished,
-  author       = {Peter Marcheford}, 
-  title        = {The title of the work},
-  note         = {An optional note},
-  month        = {7},
-  year         = {1993},
-  language     = {english}
-}
-
-%%% Реальные примеры
-
-% Инициалы должны быть записаны после запятой, с точками, через пробел
-% http://www.kit-e.ru/articles/elcomp/2006_12_124.php
-% Подчёркивания в ссылке приходится экранировать
-% http://www.kit-e.ru/articles/elcomp/2006\_12\_124.php
-@online{medvedev2006jelektronnye,
-  title={Электронные компоненты и монтажные подложки},
-  author={Медведев, А. М.},
-  journal={Компоненты и технологии},
-  number={12},
-  pages={124--134},
-  year={2006},
-  medium={Электронный ресурс},
-  url = {http://www.kit-e.ru/articles/elcomp/2006\_12\_124.php},
-  urldate = {19.01.2015},
-  language = {russian}
-}
-
-% Real example
-% & в названии журнала надо экранировать
-% 10.1002/1521-4125(200007)23:7<581::AID-CEAT581>3.0.CO;2-P
-% < > в ссылке приходится экранировать %3C и %3E, а потом ещё знаки процента в них экранировать
-% 10.1002/1521-4125(200007)23:7%3C581::AID-CEAT581%3E3.0.CO;2-P
-% 10.1002/1521-4125(200007)23:7\%3C581::AID-CEAT581\%3E3.0.CO;2-P
-% url не нужен. если запись о бумажной публикации
-@article {CEAT:CEAT581,
-  author = {Deiters, U. K.},
-  title = {A Modular Program System for the Calculation of Thermodynamic Properties of Fluids},
-  journal = {Chemical Engineering \& Technology},
-  volume = {23},
-  number = {7},
-  publisher = {WILEY-VCH Verlag},
-  issn = {1521-4125},
-  doi = {10.1002/1521-4125(200007)23:7\%3C581::AID-CEAT581\%3E3.0.CO;2-P},
-  pages = {581--584},
-  year = {2000},
+@techreport{REDD78,
+  title={Representation of Three-Dimensional Objects.},
+  author={Reddy, Dabbala Raj and Rubin, S},
+  year={1978},
+  institution={Carnegie-mellon Univ Pittsburgh Pa Dept Of Computer Science},
   language = {english}
 }
 
-% Real with  4 authors
-@article{doi:10.1080/01932691.2010.513279,
-  author = { {\relax Y}oung-{\relax S}ang   Cho  and  {\relax Y}oung   {\relax K}uk   Kim  and  {\relax K}ook   {\relax C}hae   Chung  and  {\relax C}hul   {\relax J}in   Choi },
-  title = {Deformation of Colloidal Crystals for Photonic Band Gap Tuning},
-  journal = {Journal of Dispersion Science and Technology},
-  volume = {32},
-  number = {10},
-  pages = {1408-1415},
-  year = {2011},
-  doi = {10.1080/01932691.2010.513279},
+@article{Meagher82,
+  title={Geometric modeling using octree encoding},
+  author={Meagher, Donald},
+  journal={Computer graphics and image processing},
+  volume={19},
+  number={2},
+  pages={129--147},
+  year={1982},
+  publisher={Elsevier},
   language = {english}
 }
 
-% doi with (), author with umlaut or other unicode or specific symbols, 9 authors
-% latex don't like Gösele1999161 in ref
-% Умляуты в авторах понимаются из-за поддержки в юникодной странице pdflatex и xelatex
-% Иллюстрация того, что будет. если на английской записи будут поставлена пометка, что язык русский
-@article{Gosele1999161,
-  title = "Wafer bonding for microsystems technologies ",
-  journal = "Sensors and Actuators A: Physical ",
-  volume = "74",
-  number = "1–3",
-  pages = "161 - 168",
-  year = "1999",
-  issn = "0924-4247",
-  doi = "10.1016/S0924-4247(98)00310-0",
-  author = "Gösele, U. and Tong, Q.-Y. and Schumacher, A. and Kräuter, G. and Reiche, M. and Plößl, A. and Kopperschmidt, P. and Lee, T.-H. and Kim, W.-J.",
-  keywords = "Wafer bonding",
-  keywords = "Fusion bonding",
-  keywords = "Pressure sensors",
-  keywords = "Interface reactions",
-  keywords = "Hydrophilic bonding",
-  keywords = "Hydrophobic bonding",
-  language = {russian}
+@article{schroeder1990,
+  title={A combined octree/Delaunay method for fully automatic 3-D mesh generation},
+  author={Schroeder, W. J. and Shephard, M. S.},
+  journal={International Journal for Numerical Methods in Engineering},
+  volume={29},
+  number={1},
+  pages={37--55},
+  year={1990},
+  publisher={Wiley Online Library},
+  language = {english}
 }
 
-% Real example (from Google or Springer)
-% unmodified styles don't know %language = {English}
-% язык писать с маленьких
-% иллюстрация incollection
-% 10.1007/0-387-32989-7_45
-% Подчёркивания в DOI приходится экранировать
-% 10.1007/0-387-32989-7\_45
-@incollection{Li2007StressAnalysis,
+@inproceedings{edelsbrunner1994,
+  title={Modeling with Simplicial Complexes},
+  author={Edelsbrunner, Herbert},
+  booktitle={CCCG},
+  pages={36--44},
+  year={1994},
+  language = {english}
+}
+
+@article{Requicha77,
+  title={Constructive solid geometry},
+  author={Requicha, Aristides AG and Voelcker, Herbert B},
+  year={1977},
+  publisher={Cumincad},
+  language = {english}
+}
+
+@article{brunet1990solid,
+  title={Solid representation and operation using extended octrees},
+  author={Brunet, Pere and Navazo, Isabel},
+  journal={ACM Transactions on Graphics (TOG)},
+  volume={9},
+  number={2},
+  pages={170--197},
+  year={1990},
+  publisher={ACM},
+  language = {english}
+}
+
+@inproceedings{dyllong2007reliable,
+  title={A reliable extended octree representation of CSG objects with an adaptive subdivision depth},
+  author={Dyllong, Eva and Grimm, Cornelius},
+  booktitle={International Conference on Parallel Processing and Applied Mathematics},
+  pages={1341--1350},
   year={2007},
-  isbn={978-0-387-27974-9},
-  booktitle={Micro- and Opto-Electronic Materials and Structures: Physics, Mechanics, Design, Reliability, Packaging},
-  editor={Suhir, E. and Lee, Y. C. and Wong, C. P.},
-  doi={10.1007/0-387-32989-7\_45},
-  title={Stress Analysis for Processed Silicon Wafers and Packaged Micro-devices},
-  publisher={Springer US},
-  author={Li, {\relax L}i and Guo, {\relax Y}ifan and Zheng, {\relax D}awei},
-  pages={B677-B709},
-  language={english}
+  organization={Springer},
+  language = {english}
 }
 
-% Real, β sign 
-% inputenc don't know β sign %aluminosilicate-β-quartz
-% Знаки типа β, которые не знает таблица кодировки, с которой работает компилятор нужно заменять на latex команды
-% doi должен быть без http://dx.doi.org/
-@article{Shoji199895,
-title = "Low-temperature anodic bonding using lithium aluminosilicate-$\beta$-quartz glass ceramic",
-journal = "Sensors and Actuators A: Physical",
-volume = "64",
-number = "1",
-pages = "95 - 100",
-year = "1998",
-note = "Tenth \{IEEE\} International Workshop on Micro Electro Mechanical Systems ",
-issn = "0924-4247",
-doi = "10.1016/S0924-4247(97)01659-2",
-author = {{\relax S}huichi Shoji and {\relax H}iroto Kikuchi and {\relax H}irotaka Torigoe},
-keywords = "Anodic bonding",
-keywords = "Low-temperature bonding",
-keywords = "Micro assembly",
-keywords = "Micro package",
-keywords = "Glass ceramic",
+@inproceedings{frisken2000adaptively,
+  title={Adaptively sampled distance fields: A general representation of shape for computer graphics},
+  author={Frisken, Sarah F and Perry, Ronald N and Rockwood, Alyn P and Jones, Thouis R},
+  booktitle={Proceedings of the 27th annual conference on Computer graphics and interactive techniques},
+  pages={249--254},
+  year={2000},
+  organization={ACM Press/Addison-Wesley Publishing Co.},
+  language = {english}
 }
 
-
-% from urlbst package
-% Example from Jason Eisner, by mail (nothing special about the entry,
-% but he seemed to be having formatting problems with unsrturl and proceedings
-% entries.
-% http://cs.jhu.edu/~jason/papers/#icassp07
-@InProceedings{test:eisner-sample,
-  author =       {Damianos Karakos and Sanjeev Khudanpur and Jason
-                  Eisner and Carey~E. Priebe},
-  title =        {Iterative denoising using {J}ensen-{R}enyi
-                  divergences with an application to unsupervised
-                  document categorization},
-  booktitle =    {Proceedings of ICASSP},
-  year =         2007,
-  url =          {http://cs.jhu.edu/~jason/papers/\#icassp07}
+@inproceedings{Figueiredo2001revisiting,
+  title={Revisiting adaptively sampled distance fields},
+  author={de Figueiredo, Luiz Henrique and Velho, Luiz and De Oliveira, Joao Batista},
+  booktitle={Computer Graphics and Image Processing, 2001 Proceedings of XIV Brazilian Symposium on},
+  pages={377},
+  year={2001},
+  organization={IEEE},
+  language = {english}
 }
 
-% Попытка записать патент имеющимися средствами
-@Book{iofis_patent1960,
-  title                    = {Способ пайки керамики с~керамикой и~стекла с~металлом: а.\,с.~126728 СССР},
-  author                   = {Иофис, Н. А.},
-  year                     = {1960},
-  numpages                 = {Бюл. № 5.~1},
-  language                 = {russian}
+@inproceedings{perry2001kizamu,
+  title={Kizamu: A system for sculpting digital characters},
+  author={Perry, Ronald N and Frisken, Sarah F},
+  booktitle={Proceedings of the 28th annual conference on Computer graphics and interactive techniques},
+  pages={47--56},
+  year={2001},
+  organization={ACM},
+  language = {english}
 }
 
-% Попытка записать патент имеющимися средствами
-@Book{AB_patent_Pomerantz_1968,
-  title                    = {Anodic bonding: patent no. 3397278 US},
-  author                   = {Pomerantz, D. I.},
-  year                     = {1968},
-  language                 = {english}
+@article{sullivan2012high,
+  title={High accuracy NC milling simulation using composite adaptively sampled distance fields},
+  author={Sullivan, Alan and Erdim, Huseyin and Perry, Ronald N and Frisken, Sarah F},
+  journal={Computer-Aided Design},
+  volume={44},
+  number={6},
+  pages={522--536},
+  year={2012},
+  publisher={Elsevier},
+  language = {english}
 }
 
+@PHDTHESIS{Braid74,
+  author       = {Braid, I.C}, 
+  title        = {Designing with volumes},
+  school       = {Cambridge University, England},
+  year         = {1974},
+  language     = {english}
+}
+
+@online{LaMarche,
+  title={Preparing Blender Files for 3D Printing},
+  author={Jeff LaMarche},
+  url = {https://www.shapeways.com/tutorials/prepping_blender_files_for_3d_printing},
+  urldate = {17.09.2018},
+  language = {english}
+}
+
+@online{MeshlabCleaning,
+  title={On the subtle art of mesh cleaning},
+  url = {http://meshlabstuff.blogspot.com/2009/03/on-subtle-art-of-mesh-cleaning.html},
+  urldate = {17.09.2018},
+  language = {english}
+}
+
+@article{pasko1995function,
+  title={Function representation in geometric modeling: concepts, implementation and applications},
+  author={Pasko, Alexander and Adzhiev, Valery and Sourin, Alexei and Savchenko, Vladimir},
+  journal={The Visual Computer},
+  volume={11},
+  number={8},
+  pages={429--446},
+  year={1995},
+  publisher={Springer},
+  language = {english}
+}
+
+@BOOK{Rvachev82,
+  title={Теория Р-функций и некоторые ее приложения},
+  author={Рвачев, В.Л.},
+  year={1982},
+  publisher={Наукова думка},
+  numpages = {550},
+  language = {russian}
+}
+
+@inproceedings{lorensen1987marching,
+  title={Marching cubes: A high resolution 3D surface construction algorithm},
+  author={Lorensen, William E and Cline, Harvey E},
+  booktitle={ACM siggraph computer graphics},
+  volume={21},
+  number={4},
+  pages={163--169},
+  year={1987},
+  organization={ACM},
+  language = {english}
+}
+
+@inproceedings{muller1997visualization,
+  title={Visualization of implicit surfaces using adaptive tetrahedrizations},
+  author={M{\"u}ller, Heinrich and Wehle, Michael},
+  booktitle={dagstuhl},
+  pages={243},
+  year={1997},
+  organization={IEEE},
+  language = {english}
+}
+
+@inproceedings{appel1967notion,
+  title={The notion of quantitative invisibility and the machine rendering of solids},
+  author={Appel, Arthur},
+  booktitle={Proceedings of the 1967 22nd national conference},
+  pages={387--393},
+  year={1967},
+  organization={ACM},
+  language = {english}
+}
+
+@article{griffiths1979eliminating,
+  title={Eliminating hidden edges in line drawings},
+  author={Griffiths, JG},
+  journal={Computer-aided design},
+  volume={11},
+  number={2},
+  pages={71--78},
+  year={1979},
+  publisher={Elsevier},
+  language = {english}
+}
+
+@article{goldstein1971,
+  title={3-D visual simulation},
+  author={Goldstein, Robert A and Nagel, Roger},
+  journal={Simulation},
+  volume={16},
+  number={1},
+  pages={25--31},
+  year={1971},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA},
+  language = {english}
+}
+
+@article{roth1982ray,
+  title={Ray casting for modeling solids},
+  author={Roth, Scott D},
+  journal={Computer graphics and image processing},
+  volume={18},
+  number={2},
+  pages={109--144},
+  year={1982},
+  publisher={Elsevier},
+  language = {english}
+}
+
+@article{tilove1980set,
+  title={Set membership classification: A unified approach to geometric intersection problems},
+  author={Tilove, Robert B.},
+  journal={IEEE Transactions on Computers},
+  number={10},
+  pages={874--883},
+  year={1980},
+  publisher={IEEE},
+  language = {english}
+}
+
+@article{bronsvoort1984two,
+  title={Two methods for improving the efficiency of ray casting in solid modelling},
+  author={Bronsvoort, Willem F and van Wijk, Jarke J and Jansen, Frederik W},
+  journal={Computer-aided design},
+  volume={16},
+  number={1},
+  pages={51--55},
+  year={1984},
+  publisher={Elsevier},
+  language = {english}
+}
+
+@article{atherton1983scan,
+  title={A scan-line hidden surface removal procedure for constructive solid geometry},
+  author={Atherton, Peter R},
+  journal={ACM SIGGRAPH Computer Graphics},
+  volume={17},
+  number={3},
+  pages={73--82},
+  year={1983},
+  publisher={ACM},
+  language = {english}
+}
+
+@inproceedings{lefebvre2013icesl,
+  title={IceSL: A GPU accelerated CSG modeler and slicer},
+  author={Lefebvre, Sylvain and Grand-Est, LORIA--INRIA Nancy},
+  booktitle={18th European Forum on Additive Manufacturing (AEFA’13)},
+  year={2013},
+  organization={Citeseer},
+  language = {english}
+}
+
+@article{goldfeather1989near,
+  title={Near real-time CSG rendering using tree normalization and geometric pruning},
+  author={Goldfeather, Jack and Monar, Steven and Turk, Greg and Fuchs, Henry},
+  journal={IEEE Computer Graphics and Applications},
+  volume={9},
+  number={3},
+  pages={20--28},
+  year={1989},
+  publisher={IEEE},
+  language = {english}
+}
+
+@article{stewart2002linear,
+  title={Linear-time CSG rendering of intersected convex objects},
+  author={Stewart, Nigel and Leach, Geoff and Sabu, John},
+  year={2002},
+  publisher={UNION Agency},
+  language = {english}
+}
+
+@article{erhart2000general,
+  title={General purpose z-buffer CSG rendering with consumer level hardware},
+  author={Erhart, Gunter and Tobler, R},
+  journal={VRVis Zentrum fur Virtual Reality und Visualisierung Forschungs-GmbH, Tech. Rep. VRVis},
+  volume={3},
+  year={2000},
+  publisher={Citeseer},
+  language = {english}
+}
+
+@inproceedings{kirsch2005opencsg,
+  title={OpenCSG: A Library for Image-Based CSG Rendering.},
+  author={Kirsch, Florian and D{\"o}llner, J{\"u}rgen},
+  booktitle={USENIX Annual Technical Conference, FREENIX Track},
+  pages={129--140},
+  year={2005},
+  language = {english}
+}
+
+@article{theoharis2001magic,
+  title={The magic of the z-buffer: A survey},
+  author={Theoharis, Theoharis and Papaioannou, Georgios and Karabassi, Evaggelia-Aggeliki},
+  year={2001},
+  publisher={University of West Bohemia},
+  language = {english}
+}
+
+@inproceedings{guha2003application,
+  title={Application of the two-sided depth test to CSG rendering},
+  author={Guha, Sudipto and Krishnan, Shankar and Munagala, Kamesh and Venkatasubramanian, Suresh},
+  booktitle={Proceedings of the 2003 symposium on Interactive 3D graphics},
+  pages={177--180},
+  year={2003},
+  organization={ACM},
+  language = {english}
+}
+
+@article{kirsch2004rendering,
+  title={Rendering techniques for hardware-accelerated image-based CSG},
+  author={Kirsch, Florian and D{\"o}llner, J{\"u}rgen},
+  year={2004},
+  publisher={UNION Agency},
+  language = {english}
+}
+
+@inproceedings{hable2005blister,
+  title={Blister: GPU-based rendering of Boolean combinations of free-form triangulated shapes},
+  author={Hable, John and Rossignac, Jarek},
+  booktitle={ACM Transactions on Graphics (TOG)},
+  volume={24},
+  number={3},
+  pages={1024--1031},
+  year={2005},
+  organization={ACM},
+  language = {english}
+}
+
+@techreport{rossignac1999blist,
+  title={BLIST: A Boolean list formulation of CSG trees},
+  author={Rossignac, Jaroslaw R},
+  year={1999},
+  institution={Georgia Institute of Technology},
+  language = {english}
+}
+
+@inproceedings{romeiro2006hardware,
+  title={Hardware-assisted rendering of csg models},
+  author={Romeiro, Fabiano and Velho, Luiz and De Figueiredo, Luiz Henrique},
+  booktitle={Computer Graphics and Image Processing, 2006. SIBGRAPI'06. 19th Brazilian Symposium on},
+  pages={139--146},
+  year={2006},
+  organization={IEEE},
+  language = {english}
+}
+
+@online{kensler2006ray,
+  title={Ray tracing CSG objects using single hit intersections},
+  author={Kensler, A},
+  url = {http://xrt.wdfiles.com/local--files/doc%3Acsg/CSG.pdf},
+  urldate = {17.09.2018},
+  year={2006},
+  language = {english}
+}
+
+@article{rossignac1988active,
+  title={Active zones in CSG for accelerating boundary evaluation, redundancy elimination, interference detection, and shading algorithms},
+  author={Rossignac, Jaroslaw R and Voelcker, Herbert B},
+  journal={ACM Transactions on Graphics (TOG)},
+  volume={8},
+  number={1},
+  pages={51--87},
+  year={1988},
+  publisher={ACM},
+  language = {english}
+}
+
+@inproceedings{rossignac1994processing,
+  title={Processing Disjunctive forms directly from CSG graphs, Jarek Rossignac},
+  author={Rossignac, J},
+  booktitle={Proceedings of CSG},
+  volume={94},
+  pages={55--70},
+  year={1994},
+  language = {english}
+}
+
+@incollection{cameron1989relationship,
+  title={Relationship between S-bounds and active zones in constructive solid geometry},
+  author={Cameron, Stephen and Rossignac, Jarek},
+  booktitle={Theory and practice of geometric modeling},
+  pages={369--382},
+  year={1989},
+  publisher={Springer},
+  language = {english}
+}
+
+@article{hable2007cst,
+  title={Cst: Constructive solid trimming for rendering breps and csg},
+  author={Hable, John and Rossignac, Jarek},
+  journal={IEEE Transactions on Visualization and Computer Graphics},
+  volume={13},
+  number={5},
+  pages={1004--1014},
+  year={2007},
+  publisher={IEEE},
+  language = {english}
+}
+
+@techreport{rossignac2007optimized,
+  title={Optimized blist form (OBF)},
+  author={Rossignac, Jaroslaw R},
+  year={2007},
+  institution={Georgia Institute of Technology},
+  language = {english}
+}
+
+@article{clark1976hierarchical,
+  title={Hierarchical geometric models for visible surface algorithms},
+  author={Clark, James H},
+  journal={Communications of the ACM},
+  volume={19},
+  number={10},
+  pages={547--554},
+  year={1976},
+  publisher={ACM},
+  language = {english}
+}
+
+@inproceedings{rubin19803,
+  title={A 3-dimensional representation for fast rendering of complex scenes},
+  author={Rubin, Steven M and Whitted, Turner},
+  booktitle={ACM SIGGRAPH Computer Graphics},
+  volume={14},
+  number={3},
+  pages={110--116},
+  year={1980},
+  organization={ACM},
+  language = {english}
+}
+
+@article{weghorst1984improved,
+  title={Improved computational methods for ray tracing},
+  author={Weghorst, Hank and Hooper, Gary and Greenberg, Donald P},
+  journal={ACM Transactions on Graphics (TOG)},
+  volume={3},
+  number={1},
+  pages={52--69},
+  year={1984},
+  publisher={ACM},
+  language = {english}
+}
+
+@inproceedings{bouatouch1987new,
+  title={A new algorithm of space tracing using a CSG model},
+  author={Bouatouch, Kadi and Madani, Mohamecl Ouali and Priol, Thierry and Arnaldi, Bruno},
+  booktitle={Proc. Eurographics},
+  volume={87},
+  pages={65--77},
+  year={1987},
+  language = {english}
+}
+
+@inproceedings{wiegand1996interactive,
+  title={Interactive rendering of CSG models},
+  author={Wiegand, TE},
+  booktitle={Computer Graphics Forum},
+  volume={15},
+  number={4},
+  pages={249--261},
+  year={1996},
+  organization={Wiley Online Library},
+  language = {english}
+}
+
+@article{tilove1984null,
+  title={A null-object detection algorithm for constructive solid geometry},
+  author={Tilove, Robert B},
+  journal={Communications of the ACM},
+  volume={27},
+  number={7},
+  pages={684--694},
+  year={1984},
+  publisher={ACM},
+  language = {english}
+}
+
+@inproceedings{wald2007fast,
+  title={On fast construction of SAH-based bounding volume hierarchies},
+  author={Wald, Ingo},
+  booktitle={Interactive Ray Tracing, 2007. RT'07. IEEE Symposium on},
+  pages={33--40},
+  year={2007},
+  organization={IEEE},
+  language = {english}
+}
+
+@PHDTHESIS{veach1997robust,
+  author       = {Veach, Eric}, 
+  title        = {Robust monte carlo methods for light transport simulation},
+  school       = {Stanford University},
+  year         = {1997},
+  language     = {english}
+}
+
+@article{lafortune1993bi,
+  title={Bi-directional path tracing},
+  author={Lafortune, Eric P and Willems, Yves D},
+  year={1993},
+  language = {english}
+}
+
+@article{fujimoto1986arts,
+  title={Arts: Accelerated ray-tracing system},
+  author={Fujimoto, Akira and Tanaka, Takayuki and Iwata, Kansei},
+  journal={IEEE Computer Graphics and Applications},
+  volume={6},
+  number={4},
+  pages={16--26},
+  year={1986},
+  publisher={IEEE},
+  language = {english}
+}
+
+@inproceedings{cosenza2008survey,
+  title={A Survey on Exploiting Grids for Ray Tracing.},
+  author={Cosenza, Biagio},
+  booktitle={Eurographics Italian Chapter Conference},
+  pages={89--96},
+  year={2008},
+  language = {english}
+}
+
+@article{glassner1984space,
+  title={Space subdivision for fast ray tracing},
+  author={Glassner, Andrew S},
+  journal={IEEE Computer Graphics and applications},
+  volume={4},
+  number={10},
+  pages={15--24},
+  year={1984},
+  publisher={IEEE},
+  language = {english}
+}
+
+@article{bentley1975multidimensional,
+  title={Multidimensional binary search trees used for associative searching},
+  author={Bentley, Jon Louis},
+  journal={Communications of the ACM},
+  volume={18},
+  number={9},
+  pages={509--517},
+  year={1975},
+  publisher={ACM},
+  language = {english}
+}
+
+@inproceedings{havran2007relation,
+  title={About the relation between spatial subdivisions and object hierarchies used in ray tracing},
+  author={Havran, Vlastimil},
+  booktitle={Proceedings of the 23rd Spring Conference on Computer Graphics},
+  pages={43--48},
+  year={2007},
+  organization={ACM},
+  language = {english}
+}
+
+@inproceedings{ooi1987spatial,
+  title={Spatial kd-tree: an indexing mechanism for spatial database},
+  author={Ooi, Beng Chin},
+  booktitle={COMPSAC 87, The Eleventh Annual Int. Comp. Software \& App. Conf.},
+  pages={433--438},
+  year={1987},
+  language = {english}
+}
+
+@article{havran2000statistical,
+  title={Statistical comparison of ray-shooting efficiency schemes},
+  author={Havran, Vlastimil and Prikryl, Jan and Purgathofer, Werner},
+  year={2000},
+  publisher={Citeseer},
+  language = {english}
+}
+}
