--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -57,37 +57,39 @@
 %Х из которых изданы в журналах, рекомендованных ВАК~\cite{Sokolov,Gaidaenko}, 
 %ХХ --- в тезисах докладов~\cite{Lermontov,Management}.
 
-\ifnumequal{\value{bibliosel}}{0}{% Встроенная реализация с загрузкой файла через движок bibtex8
-    \publications\ Основные результаты по теме диссертации изложены в XX печатных изданиях, 
-    X из которых изданы в журналах, рекомендованных ВАК, 
-    X "--- в тезисах докладов.%
-}{% Реализация пакетом biblatex через движок biber
-%Сделана отдельная секция, чтобы не отображались в списке цитированных материалов
-    \begin{refsection}[vak,papers,conf]% Подсчет и нумерация авторских работ. Засчитываются только те, которые были прописаны внутри \nocite{}.
-        %Чтобы сменить порядок разделов в сгрупированном списке литературы необходимо перетасовать следующие три строчки, а также команды в разделе \newcommand*{\insertbiblioauthorgrouped} в файле biblio/biblatex.tex
-        \printbibliography[heading=countauthorvak, env=countauthorvak, keyword=biblioauthorvak, section=1]%
-        \printbibliography[heading=countauthorconf, env=countauthorconf, keyword=biblioauthorconf, section=1]%
-        \printbibliography[heading=countauthornotvak, env=countauthornotvak, keyword=biblioauthornotvak, section=1]%
-        \printbibliography[heading=countauthor, env=countauthor, keyword=biblioauthor, section=1]%
-        \nocite{%Порядок перечисления в этом блоке определяет порядок вывода в списке публикаций автора
-                % vakbib1,vakbib2,%
-                % confbib1,confbib2,%
-                % bib1,bib2,%
-        }%
-        \publications\ Основные результаты по теме диссертации изложены в \arabic{citeauthor} печатных изданиях, 
-        \arabic{citeauthorvak} из которых изданы в журналах, рекомендованных ВАК, 
-        \arabic{citeauthorconf} "--- в тезисах докладов.
-    \end{refsection}
-    \begin{refsection}[vak,papers,conf]%Блок, позволяющий отобрать из всех работ автора наиболее значимые, и только их вывести в автореферате, но считать в блоке выше общее число работ
-        \printbibliography[heading=countauthorvak, env=countauthorvak, keyword=biblioauthorvak, section=2]%
-        \printbibliography[heading=countauthornotvak, env=countauthornotvak, keyword=biblioauthornotvak, section=2]%
-        \printbibliography[heading=countauthorconf, env=countauthorconf, keyword=biblioauthorconf, section=2]%
-        \printbibliography[heading=countauthor, env=countauthor, keyword=biblioauthor, section=2]%
-        % \nocite{vakbib2}%vak
-        % \nocite{bib1}%notvak
-        % \nocite{confbib1}%conf
-    \end{refsection}
-}
+\publications\ Основные результаты исследования опубликованы в 13 работах, из них: 3 публикации - в изданиях, рекомендованных ВАК; 3 публикации "--- в изданиях, индексируемых Scopus.
+
+% \ifnumequal{\value{bibliosel}}{0}{% Встроенная реализация с загрузкой файла через движок bibtex8
+%     \publications\ Основные результаты по теме диссертации изложены в XX печатных изданиях, 
+%     X из которых изданы в журналах, рекомендованных ВАК, 
+%     X "--- в тезисах докладов.%
+% }{% Реализация пакетом biblatex через движок biber
+% %Сделана отдельная секция, чтобы не отображались в списке цитированных материалов
+%     \begin{refsection}[vak,papers,conf]% Подсчет и нумерация авторских работ. Засчитываются только те, которые были прописаны внутри \nocite{}.
+%         %Чтобы сменить порядок разделов в сгрупированном списке литературы необходимо перетасовать следующие три строчки, а также команды в разделе \newcommand*{\insertbiblioauthorgrouped} в файле biblio/biblatex.tex
+%         \printbibliography[heading=countauthorvak, env=countauthorvak, keyword=biblioauthorvak, section=1]%
+%         \printbibliography[heading=countauthorconf, env=countauthorconf, keyword=biblioauthorconf, section=1]%
+%         \printbibliography[heading=countauthornotvak, env=countauthornotvak, keyword=biblioauthornotvak, section=1]%
+%         \printbibliography[heading=countauthor, env=countauthor, keyword=biblioauthor, section=1]%
+%         \nocite{%Порядок перечисления в этом блоке определяет порядок вывода в списке публикаций автора
+%                 bib2016,bib2012,%
+%                 bib2012vol,bib2012sys,%
+%                 bib2011,bib2011sah,bib2010%
+%         }%
+%         \publications\ Основные результаты по теме диссертации изложены в \arabic{citeauthor} печатных изданиях, 
+%         \arabic{citeauthorvak} из которых изданы в журналах, рекомендованных ВАК, 
+%         \arabic{citeauthorconf} "--- в тезисах докладов.
+%     \end{refsection}
+%     \begin{refsection}[vak,papers,conf]%Блок, позволяющий отобрать из всех работ автора наиболее значимые, и только их вывести в автореферате, но считать в блоке выше общее число работ
+%         \printbibliography[heading=countauthorvak, env=countauthorvak, keyword=biblioauthorvak, section=2]%
+%         \printbibliography[heading=countauthornotvak, env=countauthornotvak, keyword=biblioauthornotvak, section=2]%
+%         \printbibliography[heading=countauthorconf, env=countauthorconf, keyword=biblioauthorconf, section=2]%
+%         \printbibliography[heading=countauthor, env=countauthor, keyword=biblioauthor, section=2]%
+%         \nocite{bib2016}%vak
+%         \nocite{bib2012}%notvak
+%         % \nocite{confbib1}%conf
+%     \end{refsection}
+% }
 
 % При использовании пакета \verb!biblatex! для автоматического подсчёта
 % количества публикаций автора по теме диссертации, необходимо
